2004-08-18  Bryce Harrington <bryce@bryceharrington.com>

	* autogen.sh:  Fixing the 'missing ltmain.sh' bug

2004-08-17  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>

	* src/sp-star.cpp: Use cast to guint32 instead of using modulo 2**32.
	  Fix a uint compilation bug on Windows reported by mrchapp.
	  Mark a few functions as static.

2004-08-16  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>

	* src/sp-conn-end.cpp (change_endpts):
	  Use new sp_curve_stretch_endpoints function: i.e. preserve the
	  shape of the connector path.

	* src/display/curve.h, src/display/curve.cpp
	  (sp_curve_stretch_endpoints): New function.

	* src/sp-use-reference.cpp: CodingStyle changes.

	* src/sp-item.h, src/sp-item.cpp (sp_item_write_transform):
	  Indicate that adv won't get written to.

	* src/sp-rect.cpp (sp_rect_set_transform): Call sp_rect_set_shape,
	  so that bbox is up-to-date.

2004-08-15  Carl Hetherington  <inkscape@carlh.net>

	* src/object-edit.cpp: fix a regression in my cleanups from yesterday.

2004-08-15  MenTaLguY  <mental@rydia.net>

	* src/Makefile.am, src/Makefile_insert, src/util/Makefile_insert:

	  added libinkutil for util/ directory

	* src/arc-context.cpp, src/desktop.cpp, src/event-context.cpp,
	  src/node-context.cpp, src/rect-context.cpp, src/sp-object.cpp,
	  src/sp-text.cpp, src/spiral-context.cpp, src/star-context.cpp,
	  src/toolbox.cpp, src/dialogs/desktop-properties.cpp,
	  src/widgets/gradient-vector.cpp, src/widgets/sp-widget.cpp,
	  src/widgets/sp-xmlview-attr-list.cpp,
	  src/widgets/sp-xmlview-content.cpp, src/widgets/sp-xmlview-tree.cpp,
	  src/xml/sp-repr-event-vector.h, src/xml/sp-repr-listener.h:

	  moved SPReprListener and SPReprEventVector into their own header
	  files, and remove "destroy" callback

	* src/util/share-c-string.cpp, src/util/share-c-string.h:

	  add Inksape::Util::share_c_string, a function to make an
	  immutable and garbage-collected copy of a string which can
	  safely be shared
	